--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = []
 python = ">=3.10,<4"
 pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
 mongoengine = "^0.27.0"
+redis = "^4.5.5"
 
 
 [build-system]
