--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10,<4"
 pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
 mongoengine = "^0.27.0"
 redis = "^4.5.5"
+coloredlog = "^0.2.5"
 
 
 [build-system]
