--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = []
 python = ">=3.10,<4"
 pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
 mongoengine = "^0.27.0"
+coloredlog = "^0.2.5"
+pika = "^1.3.2"
 
 
 [build-system]
