--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
 mongoengine = "^0.27.0"
 coloredlog = "^0.2.5"
 pika = "^1.3.2"
+faker = "^18.11.1"
 
 
 [build-system]
